--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -182,6 +182,7 @@ jobs:
   test-inspircd-anope:
     needs:
     - build-inspircd
+    - build-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -194,6 +195,11 @@ jobs:
       with:
         name: installed-inspircd
         path: '~'
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-anope
+        path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
     - name: Install Atheme
@@ -203,8 +209,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/bin:$PATH
-        make anope
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/bin:$PATH  make
+        anope
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -326,6 +332,7 @@ jobs:
   test-unrealircd-anope:
     needs:
     - build-unrealircd
+    - build-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -338,6 +345,11 @@ jobs:
       with:
         name: installed-unrealircd
         path: '~'
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-anope
+        path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
     - name: Install Atheme
@@ -347,8 +359,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/bin:$PATH
-        make anope
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/bin:$PATH  make
+        anope
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
