--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -336,6 +336,7 @@ jobs:
   test-inspircd-anope:
     needs:
     - build-inspircd
+    - build-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -348,6 +349,11 @@ jobs:
       with:
         name: installed-inspircd
         path: '~'
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-anope
+        path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
     - name: Install Atheme
@@ -357,8 +363,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/bin:$PATH
-        make anope
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/bin:$PATH  make
+        anope
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -484,6 +490,7 @@ jobs:
   test-unrealircd-anope:
     needs:
     - build-unrealircd
+    - build-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -496,6 +503,11 @@ jobs:
       with:
         name: installed-unrealircd
         path: '~'
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-anope
+        path: '~'
     - name: Unpack artefacts
       run: cd ~; tar -xf artefacts-*.tar.gz
     - name: Install Atheme
@@ -505,8 +517,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/bin:$PATH
-        make anope
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/bin:$PATH  make
+        anope
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
