Fix unpacking of multiple tarballs at once

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -215,7 +215,7 @@ jobs:
         name: installed-charybdis
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -247,7 +247,7 @@ jobs:
         name: installed-ergo
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -279,7 +279,7 @@ jobs:
         name: installed-inspircd
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -317,7 +317,7 @@ jobs:
         name: installed-anope
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -375,7 +375,7 @@ jobs:
         name: installed-solanum
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -433,7 +433,7 @@ jobs:
         name: installed-unrealircd
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -471,7 +471,7 @@ jobs:
         name: installed-anope
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
