--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -253,7 +253,7 @@ jobs:
         name: installed-charybdis
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -285,7 +285,7 @@ jobs:
         name: installed-ergo
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -317,7 +317,7 @@ jobs:
         name: installed-inspircd
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -355,7 +355,7 @@ jobs:
         name: installed-anope
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -413,7 +413,7 @@ jobs:
         name: installed-solanum
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -471,7 +471,7 @@ jobs:
         name: installed-unrealircd
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
@@ -509,7 +509,7 @@ jobs:
         name: installed-anope
         path: '~'
     - name: Unpack artefacts
-      run: cd ~; tar -xf artefacts-*.tar.gz
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
