fix name of make target

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -326,7 +326,7 @@ jobs:
         pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH PYTEST_ARGS="$PYTEST_ARGS
-        -m 'not services'" PATH=~/.local/inspircd/bin:$PATH  make anope
+        -m 'not services'" PATH=~/.local/inspircd/bin:$PATH  make inspircd-anope
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -480,7 +480,7 @@ jobs:
         pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/bin:$PATH  make
-        anope
+        unrealircd-anope
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
