--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -206,7 +206,7 @@ jobs:
         # Need to use a specific -march, because GitHub has inconsistent
         # architectures across workers, which result in random SIGILL with some
         # worker combinations
-        CFLAGS="-O0 -march=i686" CXXFLAGS="$CFLAGS" ./Config -quick
+        CFLAGS="-O0 -march=athlon64" CXXFLAGS="$CFLAGS" ./Config -quick
         make -j 4
         make install
     - name: Make artefact tarball
