--- a/workflows.yml
+++ b/workflows.yml
@@ -104,6 +104,7 @@ software:
             # Need to use a specific -march, because GitHub has inconsistent
             # architectures across workers, which result in random SIGILL with some
             # worker combinations
+            sudo apt install libsodium-dev libargon2-dev
             CFLAGS="-O0 -march=x86-64" CXXFLAGS="$CFLAGS" ./Config -quick
             make -j 4
             make install
