--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -116,8 +116,7 @@ jobs:
         name: pytest results charybdis (devel_release)
         path: pytest.xml
   test-ergo:
-    needs:
-    - build-ergo
+    needs: []
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -125,13 +124,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: Download build artefacts
-      uses: actions/download-artifact@v2
-      with:
-        name: installed-ergo
-        path: '~'
-    - name: Unpack artefacts
-      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install Atheme
       run: sudo apt-get install atheme-services
     - name: Install irctest dependencies
