--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -248,6 +248,10 @@ jobs:
         path: ergo
         ref: irctest_stable
         repository: ergochat/ergo
+    - uses: actions/setup-go@v2
+      with:
+        go-version: ~1.16
+    - run: go version
     - name: Build Ergo
       run: |
         cd $GITHUB_WORKSPACE/ergo/
