Split Unreal/Insp's tests between Atheme and serviceless
it should make the critical path (insp) slightly shorter

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -148,8 +148,10 @@ jobs:
     - test-solanum
     - test-ergo
     - test-inspircd
+    - test-inspircd-atheme
     - test-inspircd-anope
     - test-unrealircd
+    - test-unrealircd-atheme
     - test-unrealircd-anope
     - test-limnoria
     - test-sopel
@@ -304,6 +306,38 @@ jobs:
       with:
         name: pytest results anope (devel)
         path: pytest.xml
+  test-inspircd-atheme:
+    needs:
+    - build-inspircd
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-inspircd
+        path: '~'
+    - name: Unpack artefacts
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH PYTEST_ARGS="$PYTEST_ARGS
+        -m 'not services'" PATH=~/.local/inspircd/bin:$PATH make inspircd-atheme
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results inspircd (devel)
+        path: pytest.xml
   test-limnoria:
     needs: []
     runs-on: ubuntu-latest
@@ -457,6 +491,38 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: pytest results anope (devel)
+        path: pytest.xml
+  test-unrealircd-atheme:
+    needs:
+    - build-unrealircd
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-unrealircd
+        path: '~'
+    - name: Unpack artefacts
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/bin:$PATH
+        make unrealircd-atheme
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results unrealircd (devel)
         path: pytest.xml
 name: irctest with devel versions
 'on':
